deploy/v2/overlays/beta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: researchcosmos-v2-beta
  labels:
    app.kubernetes.io/part-of: kcs-v2-beta
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
